# AutomaticQuant

./: .gitignore  README.md  SKILL.md
afac-sparse-feedback-quant/: .gitignore  PRIVACY.md  README.md  pyproject.toml
afac-sparse-feedback-quant/docs/: architecture.md  challenge_spec.md  model_lessons.md
afac-sparse-feedback-quant/examples/: synthetic_experiments.json  synthetic_pnl.csv
afac-sparse-feedback-quant/src/afac_sparse_quant/: __init__.py  cli.py  correlation.py  experiment.py  factor.py  memory.py
afac-sparse-feedback-quant/src/sparse_feedback_quant/: __init__.py  cli.py  correlation.py  experiment.py  factor.py  memory.py  metrics.py  selection.py
afac-sparse-feedback-quant/tests/: test_correlation.py  test_memory.py
references/: wq_usa_top3000_delay1_data_fields.csv  wq_usa_top3000_delay1_data_fields.json  wq_usa_top3000_delay1_data_fields_summary.json
scripts/: evolve_skill.py
