[build-system]
requires = ["setuptools>=68", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-feedback-quant"
version = "0.1.0"
description = "Sparse-feedback automation toolkit for sanitized quantitative factor research loops."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sparse Feedback Quant Maintainers"}]
dependencies = []

[project.scripts]
sfq = "sparse_feedback_quant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
